data/derived/comb/progs/unify/prog0242.ml.out
Characters 7-15:
  helper (9*9999);;
         ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
